--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "uuid": "^8.3.0",
+    "uuid-v4": "^0.1.0",
+    "yarn": "^1.22.4"
   },
   "scripts": {
     "start": "react-scripts start",
